--- a/todo
+++ b/todo
@@ -1,8 +1,9 @@
 TODO:
 
-- rework ralsei-keypairs to have a consistent manifest
-- fragment the server module, currently in ralsei-model
-- update import paths to work with new locations
+* rework ralsei-keypairs to have a consistent manifest
+* fragment the server module, currently in ralsei-model
+* update import paths to work with new locations
 - document ralsei-util entirely
-- ensure everything builds
-- update ci workflow
+* ensure everything builds
+* update ci workflow
+* place the account service code back into a crate
