--- a/todo
+++ b/todo
@@ -1,9 +1,6 @@
 TODO:
 
-* rework ralsei-keypairs to have a consistent manifest
-* fragment the server module, currently in ralsei-model
-* update import paths to work with new locations
 - document ralsei-util entirely
-* ensure everything builds
-* update ci workflow
-* place the account service code back into a crate
+- document all of ralsei-model and ralsei-service-account
+- finish the agreementxml datatype
+- reach feature parity with fennel
